Add code to index.html

--- a/index.html
+++ b/index.html
@@ -2,44 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Page title</title>
+        <title>Carousel</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </head>
     <body>
-        <div class="content">
-            <div>
-                <p><span>span 1</span></p>
-            </div>
-            <div>
-                <p>1</p>
-            </div>
-            <div>
-                <p><span>span 2</span></p>
-            </div>
-            <div>
-                <p>2</p>
-            </div>
-            <div>
-                <p><span>span 3</span></p>
-            </div>
-            <div>
-                <p>3</p>
-            </div>
-            <div>
-                <p><span>span 4</span></p>
-            </div>
-            <div>
-                <p>4</p>
-            </div>
-            <div>
-                <p><span>span 5</span></p>
-            </div>
-            <div>
-                <p>5</p>
-            </div>          
+        <div id="carousel">
+            <ul>
+                <li><img src="https://images.pexels.com/photos/695973/pexels-photo-695973.jpeg?h=266&dpr=&auto=compress&cs=tinysrgb"></li>
+                <li><img src="https://images.pexels.com/photos/704219/pexels-photo-704219.jpeg?h=266&dpr=&auto=compress&cs=tinysrgb"></li>
+                <li><img src="https://images.pexels.com/photos/699372/pexels-photo-699372.jpeg?h=266&dpr=&auto=compress&cs=tinysrgb"></li>
+                <li><img src="https://images.pexels.com/photos/688014/pexels-photo-688014.jpeg?h=266&dpr=&auto=compress&cs=tinysrgb"></li>
+                <li><img src="https://images.pexels.com/photos/688015/pexels-photo-688015.jpeg?h=266&dpr=&auto=compress&cs=tinysrgb"></li>
+            </ul>
         </div>
+
         <!-- scripts -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
     </body>
 </html>
